2008-03-21  Leonardo Valeri Manera <l.valerimanera@gmail.com>

	* data/gnome-commander.ebuild:
	Updated ebuild file for gentoo systems

2008-03-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-key-shortcuts-dialog.cc:
	* src/gnome-cmd-key-shortcuts-dialog.h:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added GUI for keyboard shortcuts management

2008-03-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.h:
	Move key2str() and str2key() out of GnomeCmdUserActions class

2008-03-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	* src/gnome-cmd-file-list.cc:
	Fix sorting for sorting of UTF-8 encoded file names

2008-03-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.h:
	Added ascii_islower() and ascii_isupper()
	Added GnomeCmdUserActions::clear()

	* src/gnome-cmd-hintbox.cc:
	* src/gnome-cmd-hintbox.h:
	hintbox: new widget showing a label showing decorated with a GTK_STOCK_DIALOG_INFO icon

2008-03-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added GnomeCmdUserActions iterators for accessing registered GdkEventKey

2008-03-11  Piotr Eljasiak  <epiotr@use.pl>

	* libgcmd/libgcmd-widget-factory.c:
	Replacing obsoleted gnome_icon_entry_set_icon() with gnome_icon_entry_set_filename()

2008-03-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Moved static DICT<GnomeCmdUserActionFunc> to GnomeCmdUserActions class
	Added descriptions for user action

2008-03-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-commander/src/gnome-cmd-file-popmenu.cc:
	* src/gnome-commander/src/gnome-cmd-list-popmenu.cc:
	* src/gnome-commander/src/gnome-cmd-main-menu.cc:
	* src/gnome-commander/src/gnome-cmd-search-dialog.cc:
	* src/gnome-commander/src/intviewer/viewer-window.cc:
	Replaced deprecated icon names with newer ones
