@@ -10,6 +10,7 @@ New features:
  * Root Mode for starting GNOME Commander with administrator privileges
  * GUI for keyboard shortcuts management
  * Multi-Rename-Tool - new $x and $X placeholders for random hexadecimal numbers
+ * Revamped search dialog
  * Updated help docs
  * New or updated translations: en_GB, es, eu, fi, oc, pl
  * New key bindings:
